# obsidian_agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  app_gradio.py  configuration.py  graph.py  langgraph.json  obsidian_utils.py  pyproject.toml  rag_utils.py  utils.py
src/obsidian_agent/: __init__.py  s2t.py
src/obsidian_agent/apps/: streamlit_app.py
src/obsidian_agent/core/: configuration.py  environment.py  graph.py  models.py  store.py  tools.py
src/obsidian_agent/core/nodes/: assistant.py  notes.py  others.py  profile.py  router.py  tools.py
src/obsidian_agent/utils/: common.py  obsidian.py  rag.py
tests/: test_obsidian_library.py
tests/test_core/: conftest.py  test_assistant_nodes.py  test_common_utils.py  test_environment.py  test_graph_integration.py  test_note_nodes.py  test_profile_nodes.py  test_tools_node.py
tests/test_utils/: test_obsidian_library.py
