[project]
name = "obsidian-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.1",
    "langchain-community>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.2.14",
    "langgraph>=0.2.60",
    "langgraph-checkpoint>=2.0.9",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langgraph-cli[inmem]>=0.1.65",
    "langgraph-sdk>=0.1.48",
    "langsmith>=0.2.7",
    "tavily-python>=0.5.0",
    "trustcall>=0.0.26",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "rich>=13.9.4",
]
