[project]
name = "obsidian-agent"
version = "0.1.0"
description = "An LLM agent assistant for Obsidian library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "gradio>=5.12.0",
    "langchain-anthropic>=0.3.1",
    "langchain-community>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-google-genai==2.0.7",
    "langchain-openai>=0.2.14",
    "langgraph>=0.2.60",
    "langgraph-checkpoint>=2.0.9",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langgraph-cli[inmem]>=0.1.65",
    "langgraph-sdk>=0.1.48",
    "langsmith>=0.2.7",
    "tavily-python>=0.5.0",
    "trustcall>=0.0.26",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.6",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "rich>=13.9.4",
    "ruff>=0.9.1",
    "streamlit>=1.41.1",
    "tomli>=2.2.1",
    "uvicorn>=0.34.0",
]
